# Code_Y_Blog

./: .gitignore  CNAME  blog.db  forms.py  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.upm/: store.json
static/css/: clean-blog.min.css
templates/: edit.html  header.html  index.html  make-post.html
